[package]
name = "string-utility"
version = "0.2.1"
edition = "2024"
autoexamples = true
description = "Provides simple substring implementation (with the RangeBound trait), keep string before or after a specified string, etc."
readme = "README.md"
homepage = "https://github.com/floating-floaties/string-utility/"
repository = "https://github.com/floating-floaties/string-utility/"
license = "GPL-3.0-only"
keywords = ["substring", "range", "range-bound", "keep-before", "keep-after"]
exclude = ["Dockerfile", "target", "docker*", "*.lock", ".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#regex = { version = "1", optional = true }

[features]
default = []
#regex = ["dep:regex"]

